clicking on active member now shows that specific member's profile . memberdirectorycard section complete but not made responsive

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root{
   --navBg : #282733 ;
   --leadText : #282733;
+  --purple : #975dfd;
   --white : white ;
   --navLoginBtnBorder : rgba(255, 255, 255, 0.2);
   --navSubMenu : #252537;
