fixes under bug in community section in home page . removes stupid box shadow from navbar-toggler

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -147,6 +147,9 @@ button{
     background-image: url(../../assets/menu.svg);
     background-size: 24px;
 }
+.navbar-toggler:focus {
+    box-shadow: unset;
+}
 
 
 /* XX-Large devices (larger desktops, 1400px and up)*/
