--- a/src/components/helpCenter/HelpCenter.css
+++ b/src/components/helpCenter/HelpCenter.css
@@ -24,14 +24,17 @@
     color: var(--red);
     font-weight: 500;
     transition: all 300ms ease;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
 }
 .help-center-inner button:hover{
     background-color: var(--red);
     color: var(--white);
 }
-.help-center-inner button i{
-    font-size: 16px;
-    margin-right: 2px;
+.help-center-inner button img{
+    width: 16px;
+    margin-right: 5px;
 }
 /*HELP CENTER HELP CENTER   */
 
