--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -112,6 +112,9 @@
     .footer-brand p{
         margin-bottom: unset;
     }
+    .footer-item ul li button:hover{
+        transform: translateX(0px);
+    }
     .footer-main-inner{
         grid-template-columns: 1fr;
         gap: 20px;
@@ -129,6 +132,7 @@
     .footer-copyright-inner p{
         margin-bottom: 30px;
     }
+    
     .footer-item ul li button:hover{
         transform: translateX(0px);
     }
@@ -148,6 +152,7 @@
     .footer-item ul li button:hover{
         transform: translateX(0px);
     }
+    
     
     .footer-main-inner{
         grid-template-columns: 1fr;
