--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -58,7 +58,9 @@ button{
     font-size: 14.5px;
     font-weight: 500;
 }
-
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color: var(--white);
+}
 .navbar-nav .nav-item .active{
     
     color: var(--white) !important;
@@ -93,6 +95,7 @@ button{
 }
 .nav-item .sub-menu li button a{
     color: var(--white);
+    width: 100%;
 }
 .nav-item .sub-menu li button:hover a{
     color: var(--navBg);
