adds login page also makes it responsive. makes custom header section

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   --lightPink : #f5cbd3;
   --yellow : #f1c40f;
   --green: #0abb87;
-
+  --purple: #572b40 ;
 
   --open-sans :'Open Sans', sans-serif;
 }
