--- a/src/components/customHeader/CustomHeader.css
+++ b/src/components/customHeader/CustomHeader.css
@@ -19,13 +19,13 @@
 .custom-header-parent .custom-header-caption a:hover{
     filter: brightness(1.3);
 }
-.custom-header-caption div{
+.custom-header-caption div span{
     position: relative;
 }
-.custom-header-caption div::after{
+.custom-header-caption div span::after{
     position: absolute;
     content: '';
-    left: 51%;
+    left: -2px;
     top: 50%;
     transform: translate(-50%,-50%);
     width: 4px;
