--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -1,127 +1,151 @@
-.register-parent .custom-header-component .custom-header-parent{
-    background-color: var(--navBg);
-}
-.gap-10{
-    gap: 10px;
-}
-.register-form-parent{
-    padding: 3% 0;
-    background-color: var(--sectionBg);
-}
-.register-form-parent .custom-container{
-    max-width: 910px;
-    padding: 50px 15px;
-}
-.register-form-inner{
-    max-width: 500px;
-    margin: 0 auto;
-    border-radius: 6px;
-    box-shadow: 0 2px 10px #e2e2e2;
-}
+    .register-parent .custom-header-component .custom-header-parent{
+        background-color: var(--navBg);
+    }
+    .gap-10{
+        gap: 10px;
+    }
+    .width-50{
+        width: 50%;
+    }
+    .register-form-parent{
+        padding: 3% 0;
+        background-color: var(--sectionBg);
+    }
+    .register-form-parent .custom-container{
+        max-width: 910px;
+        padding: 50px 15px;
+    }
+    .register-form-inner{
+        max-width: 700px;
+        margin: 0 auto;
+        border-radius: 6px;
+        box-shadow: 0 2px 10px #e2e2e2;
+    }
 
-.register-form-inner .register-form-cover{
-    height: 200px;
-    background-image: url(../../assets/geopattern.png);
-    background-color: white;
-    background-position: center;
-    border-radius: 6px 6px 0 0 ;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
-}
-.register-form-inner .register-form-cover div{
-    background-color: rgba(0,0,0,.45);
-    color: var(--white);
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    margin: 0 0px 20px 40px;
-    padding: 6px 12px;
-    font-family: var(--open-sans);
-}
+    .register-form-inner .register-form-cover{
+        height: 200px;
+        background-image: url(../../assets/geopattern.png);
+        background-color: white;
+        background-position: center;
+        border-radius: 6px 6px 0 0 ;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+    }
+    .register-form-inner .register-form-cover div{
+        background-color: rgba(0,0,0,.45);
+        color: var(--white);
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        margin: 0 0px 20px 40px;
+        padding: 6px 12px;
+        font-family: var(--open-sans);
+    }
 
-.register-form-fields{
-    padding: 35px 45px;
-    background-color: var(--white);
-}
-.register-form-field h6{
-    color: #898989;
-    font-weight: 400;
-    font-size: 14px;
-    font-family: var(--open-sans);
-    margin-bottom: 15px;
-}
-.register-form-field input{
-    width: 100%;
-    border: 1px solid #eee;
-    padding: 8px 10px;
-    transition: all 300ms ease;
-}
-.register-form-field input:focus{
-    box-shadow: 0 0 0px 2px var(--lightblue3);
-    outline: none;
-}
-.register-form-field:nth-child(3){
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.register-form-field:nth-child(3) button{
-    color: var(--red);
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 500;
-    letter-spacing: 1px;
-}
-.register-form-field:nth-child(3) input{
-    width: unset;
-    cursor: pointer;
-    position: absolute;
-    left: 0;
-    bottom: 2px;
-    height: 18px;
-    width: 18px;
+    .register-form-fields{
+        padding: 35px 45px;
+        background-color: var(--white);
+    }
+    .register-form-field h6{
+        color: #898989;
+        font-weight: 400;
+        font-size: 14px;
+        font-family: var(--open-sans);
+        margin-bottom: 15px;
+    }
+    .register-form-field input{
+        width: 100%;
+        border: 1px solid #eee;
+        padding: 8px 10px;
+        transition: all 300ms ease;
+    }
+    .register-form-field input:focus{
+        box-shadow: 0 0 0px 2px var(--lightblue3);
+        outline: none;
+    }
+    .register-form-field:nth-child(4){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .register-form-field:nth-child(4) button{
+        color: var(--red);
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: 500;
+        letter-spacing: 1px;
+    }
+    .register-form-field:nth-child(4) input{
+        width: unset;
+        cursor: pointer;
+        position: absolute;
+        left: 0;
+        bottom: 2px;
+        height: 18px;
+        width: 18px;
 
-}
-.register-form-field:nth-child(3) input::before{
+    }
+    .register-form-field:nth-child(4) input::before{
 
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0px;
-    width: 18px;
-    height: 18px;
-    border: 1px solid rgb(221, 221, 221);
-    background-color: transparent;
-}
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: 0px;
+        width: 18px;
+        height: 18px;
+        border: 1px solid rgb(221, 221, 221);
+        background-color: transparent;
+    }
 
-.register-form-field:nth-child(3) label{
-    cursor: pointer;
-    position: relative;
-    padding-left: 30px;
-    color: #898989;
-    font-weight: 400;
-    font-size: 14px;
-    font-family: var(--open-sans);
-    display: flex;
-    align-items: center;
-}   
-.register-form-field:last-child {
-    margin-top: 28px;
-}
-.register-form-field:last-child button{
-    padding: 16px 12px;
-    border-radius: 3px;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: var(--lightblue3);
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: all 300ms ease;
-}
-.register-form-field:last-child button:hover{
-    background-color: rgba(234,61,86,1);
-    box-shadow: 0px 1px 0 5px rgba(234,61,86,0.5);
+    .register-form-field:nth-child(4) label{
+        cursor: pointer;
+        position: relative;
+        padding-left: 30px;
+        color: #898989;
+        font-weight: 400;
+        font-size: 14px;
+        font-family: var(--open-sans);
+        display: flex;
+        align-items: center;
+        user-select: none;
+    }   
+    .register-form-field:last-child {
+        margin-top: 28px;
+    }
+    .register-form-field:last-child button{
+        padding: 16px 12px;
+        border-radius: 3px;
+        width: 100%;
+        box-sizing: border-box;
+        background-color: var(--lightblue3);
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 1px;
+        transition: all 300ms ease;
+    }
+    .register-form-field:last-child button:hover{
+        background-color: rgba(234,61,86,1);
+        box-shadow: 0px 0px 0 5px rgba(234,61,86,0.5);
+    }
+
+
+
+@media (max-width: 576px)
+{
+    .register-form-fields{
+        padding: 35px 25px;
+    }
+    .register-form-field{
+        display: flex;
+        flex-direction: column;
+    }
+    .width-50{
+        width: 100%;
+    }
+    .register-form-field:nth-child(4) label {
+        font-size: 13px;
+        text-align: center;
+    }
 }
